--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-HUGGINGFACE_API_KEY=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
+HUGGINGFACE_API_KEY= """ ENTER YOUR KEY HERE"""
 HUGGINGFACE_MODEL=meta-llama/Meta-Llama-3-8B-Instruct
+
 BUDGET_THRESHOLD=5000
